class IClassifier:
    def train(self,X, y, split_percent : float)->None:
        ...
    def predict(self, X):
        ...
    def report(self, outputPath:str|None)->None:
        ...
    def test(self)->list[list[float]]:
        ...